--- a/extension/styles.css
+++ b/extension/styles.css
@@ -6,3 +6,7 @@
   z-index: 2;
   cursor: pointer;
 }
+
+.capture-cursor{
+  cursor: url(chrome-extension://__MSG_@@extension_id__/images/cursor.png), auto;
+}
