--- a/public/popup/popup.css
+++ b/public/popup/popup.css
@@ -33,38 +33,47 @@ body {
   grid-template-rows: 100px 1fr;
   align-items: start;
   justify-items: center;
-  gap: 1em;
 }
 
 .content > button {
   max-width: 250px;
 }
 
-.batch-wrapper {
+.file-wrapper {
   width: 100%;
   height: 100%;
 }
 
-.batch-container {
+.file-container {
   max-width: 300px;
   word-break: break-all;
   background-color: #1f1f1f;
   min-width: 100%;
   min-height: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.file-container > img,
+.file-container > video {
+  max-width: 200px;
+  justify-self: end;
 }
 
 .button-container {
   width: 100%;
-  height: 100%;
+  height: 100px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   background-color: rgb(22, 22, 22);
+  position: sticky;
+  left: 0;
+  top: 0;
 }
 
-.button-container > button {
-  max-width: min-content;
-  max-height: 50px;
+.button-container > svg {
+  font-size: 25px;
 }
 
 a {
